--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.13.3",
     "express": "^4.4.4",
-    "mongodb": "^2.1.6",
-    "passport-facebook": "^2.1.1"
+    "mongodb": "^2.1.6"
   }
 }
